--- a/practica5/index.html
+++ b/practica5/index.html
@@ -86,7 +86,7 @@
         <section>
             <div class="container px-5">
 
-                <figure class="mb-4"><img class="img-fluid rounded" width="400px" src="img/TR.JPG" alt="..." />
+                <figure class="mb-4"><img class="img-fluid rounded" width="400px" src="img/TR.jpg" alt="..." />
                 </figure>
 
                 <p id="resumen">
@@ -115,7 +115,7 @@
                                     <div class="card-body p-4">
                                         <div class="text-center">
                                              <p class="fs-6 mb-4">
-                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="500px" src="img/EL.PNG" alt="..." /></figure>
+                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="500px" src="img/EL.png" alt="..." /></figure>
                                         </div>
                                     </div>
                                 </div>
@@ -124,7 +124,7 @@
                         <div class="col-lg-6">
                             <!-- Post content-->
                             <div class="my-5">
-                                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="800px" src="img/QE.PNG" alt="..." /></figure>
+                                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="800px" src="img/QE.png" alt="..." /></figure>
                             </div>
                         </div>
                     </div>
@@ -139,27 +139,27 @@
                                     <div class="card-body p-4">
                                         <div class="text-center">
                                              <p class="fs-6 mb-4">
-                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="500px" src="img/90.PNG" alt="..." /></figure>
+                            <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="500px" src="img/90.png" alt="..." /></figure>
                                         </div>
                                     </div>
                                 </div>
                         <div class="col-lg-6">
                             <!-- Post content-->
                             <div class="my-5">
-                                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="400px" src="img/9.PNG" alt="..." /></figure>
+                                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="400px" src="img/9.png" alt="..." /></figure>
                             </div>
                         </div>
 
                         <div class="col-lg-6">
                             <!-- Post content-->
                             <div class="my-5">
-                                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="250px" src="img/8.PNG" alt="..." /></figure>
+                                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="250px" src="img/8.png" alt="..." /></figure>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <!-- Post content-->
                             <div class="my-5">
-                                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="250px" src="img/80.PNG" alt="..." /></figure>
+                                <figure class="mb-4" align="center"><img class="img-fluid rounded"  width="250px" src="img/80.png" alt="..." /></figure>
                             </div>
                         </div>
                     </div>
