--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ border:0px solid;
                             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>                    
                             <li class="nav-item"><a class="nav-link" href="#resumen">Acerca de mi</a></li>
                             <li class="nav-item"><a class="nav-link" href="#practicas">Prácticas</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#repro">Reportes</a></li>
                         </ul>
                     </div>
                 </div>
@@ -85,7 +86,7 @@ border:0px solid;
                             <!-- Post content-->
                             <div class="my-5">
                                 <h5 class="fw-bolder">Resumen:</h2>
-                                    <p class="lead fw-normal text-muted mb-0">En este apartado se encuentran las distintas prácticas realizadas en el curso de introducción a la mecatrónica Otoño 2024.</p>
+                                    <p class="lead fw-normal text-muted mb-0">En este apartado se encuentran las distintas prácticas realizadas en el curso de introducción a la mecatrónica y proyecto de ingenieria Otoño 2024.</p>
                             </div>
                         </div>
                     </div>
@@ -96,7 +97,7 @@ border:0px solid;
             <!-- Seccion Tarjetas reportes Prácticas-->
             <section id="practicas">
                 <div class="container px-5 my-2">
-                    <h2 class="fw-bolder fs-5 mb-4">Reportes de Prácticas:</h2>
+                    <h2 class="fw-bolder fs-5 mb-4">Reportes de Prácticas introducción a Mecatrónica:</h2>
                     <div class="row gx-5">
 
 <!--Tarjeta Práctica 1 -->
@@ -227,6 +228,167 @@ border:0px solid;
              </section> 
             <!--Fin Seccion de Tarjetas de Prácticas -->
             
+
+
+            <!-- Seccion Tarjetas reportes proyecto de ing-->
+            <section id="repro">
+                <div class="container px-5 my-2">
+                    <h2 class="fw-bolder fs-5 mb-4">Reportes de Prácticas proyecto de ingeniería:</h2>
+                    <div class="row gx-5">
+
+<!--Tarjeta Práctica 1 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/LI.jpeg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Reporte 1: Soldadura y corte</h5>
+                                    <p class="card-text mb-0">En esta primera ocasión aprendimos a como emplear la soldadora y la cortadora de manera adecuada.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte1">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                <div class="fw-bold">Rodríguez Cancino Derek</div>
+                                                <div class="text-muted">Octubre 25, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Tarjeta Práctica 2 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/LA.jpeg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Reporte 2: Corte laser</h5>
+                                    <p class="card-text mb-0">En esta ocasión se abordaron los parámetros y la manera correcta para utilizar la cortadora láser por nosotros mismos.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte2">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Rodríguez Cancino Derek</div>
+                                                <div class="text-muted">Octubre 26, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!--Tarjeta Práctica 3 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/LE.jpeg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Reporte 3: Eslabones en impresión 3D</h5>
+                                    <p class="card-text mb-0">En esta práctica se abordaron las tolerancias a tomar en cuenta a la hora de imprimir en 3D, para lograr una pieza articulada.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte3">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Rodríguez Cancino Derek</div>
+                                                <div class="text-muted">Octubre 26, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                       <!--Tarjeta Práctica 4 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/LU.jpeg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Reporte 4: Maquinar en CNC</h5>
+                                    <p class="card-text mb-0">SEn esta ocasión se aprendió a manejar la maquina CNC, con la cual se hizo un molde que se empleará para futuras prácticas.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte4">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Rodríguez Cancino Derek</div>
+                                                <div class="text-muted">Octubre 27, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+            
+        <!--Tarjeta Práctica 5 -->
+             <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/BO.jpeg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Reporte 5: Moldes y contra moldes</h5>
+                                    <p class="card-text mb-0">Retomando el producto de la CNC, se elaboraron moldes emplantdo resina con su repectivo catalizador, al igual que la silicona.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte5">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Rodríguez Cancino Derek</div>
+                                                <div class="text-muted">28 de Octubre, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                <!--Tarjeta Práctica 6 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/MS.jpeg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Reporte 6: Fibra de vidrio</h5>
+                                    <p class="card-text mb-0">Con esta proctica se siguen empleando las proporciones de catalizador-resina, al igual que se explora el funcionamiento de la fibra de vidrio.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte6">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Rodríguez Cancino Derek</div>
+                                                <div class="text-muted">Octubre 29, 2024</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </section> 
+<!-- Fin de seccion Tarjetas reportes proyecto de ing-->
+
         </main>
 
         <!-- Footer-->
@@ -251,3 +413,4 @@ border:0px solid;
         <script src="../js/scripts.js"></script>
     </body>
 </html>
+
