--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ border:0px solid;
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
                                     <h5 class="card-title mt-3 mb-1">Práctica 6: Bluetooth</h5>
-                                    <p class="card-text mb-0">Siguiendo con la práctica 3, en este apartado vimos la funcionalidad y las lineas de código que nos pueden ayudar a controlar servomotores gracias a arduino</p>
+                                    <p class="card-text mb-0">En esta práctica se retoma la practica de el brazo robótico y se le realizan cambiamos al programa para que pudiera controlarse via bluetooth.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica4">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
