--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ border:0px solid;
 
 
             <!-- Seccion Acerca de Mi -->
-            <section class="">
-                <div class="container px-5 my-5">
+            <section class="" >
+                <div class="container px-5 my-5"    >
                     <div class="row gx-5">
 
                         <div class="col-lg-6">
@@ -231,7 +231,7 @@ border:0px solid;
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
                                     <h5 class="card-title mt-3 mb-1">Práctica 6: Bluetooth</h5>
-                                    <p class="card-text mb-0">En esta ocasión se remonta la practica de el brazo robótico, realizando cambiamos al programa para su control via bluetooth.</p>
+                                    <p class="card-text mb-0">En esta práctica se retoma la practica de el brazo robótico y se le realizan cambiamos al programa para que pudiera controlarse via bluetooth.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica6">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -265,7 +265,7 @@ border:0px solid;
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="img/LI.jpeg" alt="..." />
                                 <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Proyecto</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
                                     <h5 class="card-title mt-3 mb-1">Reporte 1: Soldadura y corte</h5>
                                     <p class="card-text mb-0">En esta primera ocasión aprendimos a como emplear la soldadora y la cortadora de manera adecuada.</p>
@@ -290,7 +290,7 @@ border:0px solid;
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="img/LA.jpeg" alt="..." />
                                 <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Proyecto</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
                                     <h5 class="card-title mt-3 mb-1">Reporte 2: Corte laser</h5>
                                     <p class="card-text mb-0">En esta ocasión se abordaron los parámetros y la manera correcta para utilizar la cortadora láser por nosotros mismos.</p>
@@ -315,7 +315,7 @@ border:0px solid;
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="img/LE.jpeg" alt="..." />
                                 <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Proyecto</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
                                     <h5 class="card-title mt-3 mb-1">Reporte 3: Eslabones en impresión 3D</h5>
                                     <p class="card-text mb-0">En esta práctica se abordaron las tolerancias a tomar en cuenta a la hora de imprimir en 3D, para lograr una pieza articulada.</p>
@@ -337,12 +337,12 @@ border:0px solid;
                        <!--Tarjeta Práctica 4 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/LU.jpeg" alt="..." />
+                                <img class="card-img-top" src="img/BO.jpeg" alt="..." />
                                 <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Proyecto</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Reporte 4: Maquinar en CNC</h5>
-                                    <p class="card-text mb-0">SEn esta ocasión se aprendió a manejar la maquina CNC, con la cual se hizo un molde que se empleará para futuras prácticas.</p>
+                                    <h5 class="card-title mt-3 mb-1">Reporte 4: Maquinar en CNC y moldes y contra moldes.</h5>
+                                    <p class="card-text mb-0">En esta ocasión se aprendió a manejar la maquina CNC, con la cual se elaboraron moldes emplantdo resina con su repectivo catalizador, al igual que la silicona.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte4">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -358,43 +358,18 @@ border:0px solid;
                                 </div>
                             </div>
                         </div>
-            
-        <!--Tarjeta Práctica 5 -->
-             <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="img/BO.jpeg" alt="..." />
-                                <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Reporte 5: Moldes y contra moldes</h5>
-                                    <p class="card-text mb-0">Retomando el producto de la CNC, se elaboraron moldes emplantdo resina con su repectivo catalizador, al igual que la silicona.</p>
-                                </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte5">Leer más</a></div>
-                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
-                                    <div class="d-flex align-items-end justify-content-between">
-                                        <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
-                                            <div class="small">
-                                                 <div class="fw-bold">Rodríguez Cancino Derek</div>
-                                                <div class="text-muted">28 de Octubre, 2024</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
-                <!--Tarjeta Práctica 6 -->
+                <!--Tarjeta Práctica 5 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="img/MS.jpeg" alt="..." />
                                 <div class="card-body px-4">
-                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Proyecto</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Reporte 6: Fibra de vidrio</h5>
+                                    <h5 class="card-title mt-3 mb-1">Reporte 5: Fibra de vidrio</h5>
                                     <p class="card-text mb-0">Con esta proctica se siguen empleando las proporciones de catalizador-resina, al igual que se explora el funcionamiento de la fibra de vidrio.</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte6">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="reporte5">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
@@ -437,4 +412,3 @@ border:0px solid;
         <script src="../js/scripts.js"></script>
     </body>
 </html>
-
