--- a/practica2/index.html
+++ b/practica2/index.html
@@ -30,6 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="../">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="../index.html#resumen">Acerca de mi</a></li>
                         <li class="nav-item"><a class="nav-link" href="../index.html#practicas">Prácticas</a></li>
+                     <li class="nav-item"><a class="nav-link" href="../index.html#repro">Reportes</a></li>
                     </ul>
                 </div>
             </div>
