--- a/index.html
+++ b/index.html
@@ -223,14 +223,46 @@ border:0px solid;
                                 </div>
                             </div>
                         </div>
-                        <!--Tarjeta Práctica 6 -->
+  <!--Tarjeta Práctica 6 -->
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/BLU.jpg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Bluetooth</h5>
+                                    <p class="card-text mb-0">En esta práctica conocemos la interfas de app inventor del MIT y aprendemos a controlar un puerto bluetooth para futuras prácticas.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica7">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Rodríguez Cancino Derek</div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/Kamil.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Gallardo Toledo Kamil</div>
+                                                
+                                            </div>
+                                        </div><div class="text-muted">20 de Octubre 2024</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!--Tarjeta Práctica 7 -->
                         <div class="col-lg-4 mb-5">
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="img/AEI.jpg" alt="..." />
                                 <div class="card-body px-4">
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
                                     <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
-                                    <h5 class="card-title mt-3 mb-1">Práctica 6: Bluetooth</h5>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 7: Bluetooth2</h5>
                                     <p class="card-text mb-0">En esta práctica se retoma la practica de el brazo robótico y se le realizan cambiamos al programa para que pudiera controlarse via bluetooth.</p>
                                 </div>
                                 <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica6">Leer más</a></div>
@@ -240,9 +272,15 @@ border:0px solid;
                                             <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
                                             <div class="small">
                                                  <div class="fw-bold">Rodríguez Cancino Derek</div>
-                                                <div class="text-muted">Noviembre 2, 2024</div>
                                             </div>
                                         </div>
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/Kamil.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Gallardo Toledo Kamil</div>
+                                                
+                                            </div>
+                                        </div><div class="text-muted">20 de Octubre 2024</div>
                                     </div>
                                 </div>
                             </div>
