--- a/practica6/index.html
+++ b/practica6/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Práctica 7 | Ibero Puebla</title>
+    <title> Práctica 7 | Ibero Puebla</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
@@ -65,6 +65,11 @@
                         <img class="img-fluid rounded-circle" width="15%" src="assets/AR.jpg" alt="..." />
                         <div class="ms-auto">                            
                             <div class="fw-bold"><a style="font-size: 25px;">Rodríguez Cancino Derek</a></div>
+                            <div class="text-muted"><a style="font-size: 20px;">Ing. Mecatrónica</a></div>
+                        </div>
+                        <img class="img-fluid rounded-circle" width="15%" src="assets/Kamil.jpg" alt="..." />
+                        <div class="ms-auto">                            
+                            <div class="fw-bold"><a style="font-size: 25px;">Gallardo Toledo Kamil</a></div>
                             <div class="text-muted"><a style="font-size: 20px;">Ing. Mecatrónica</a></div>
                         </div>
                         <!--Aqui termina etiqueta de alumno-->
@@ -299,6 +304,18 @@ if (mySerial.available() > 0) {<br>
                             <div class="my-5">
                                 <figure class="mb-4" align="center"><video width="60%" controls>
                         <source src="video/CC.mp4" type="video/mp4">
+                    </video></figure>
+                    
+                            </div>
+
+
+                        </div>
+
+                    <div class="col-lg-6">
+                            <!-- Post content-->
+                            <div class="my-5">
+                                <figure class="mb-4" align="center"><video width="60%" controls>
+                        <source src="video/PP.mp4" type="video/mp4">
                     </video></figure>
                     
                             </div>
