--- a/index.html
+++ b/index.html
@@ -285,6 +285,36 @@ border:0px solid;
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-lg-4 mb-5">
+                            <div class="card h-100 shadow border-0">
+                                <img class="card-img-top" src="img/UD.jpg" alt="..." />
+                                <div class="card-body px-4">
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Robótica</div></a>
+                                    <a href="#!"><div class="badge bg-primary bg-gradient rounded-pill mb-2">Matlab</div></a>
+                                    <h5 class="card-title mt-3 mb-1">Práctica 8: Bluetooth MOD</h5>
+                                    <p class="card-text mb-0">En esta práctica se retoma lo aprendido en la práctica de bluetooth y se aplica a un ensamble más complejo, como lo es un coche a control remoto.</p>
+                                </div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica8">Leer más</a></div>
+                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <div class="d-flex align-items-end justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/AR.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Rodríguez Cancino Derek</div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-center">
+                                            <img class="rounded-circle me-3" src="assets/Kamil.jpg" alt="..." width="40px">
+                                            <div class="small">
+                                                 <div class="fw-bold">Gallardo Toledo Kamil</div>
+                                                
+                                            </div>
+                                        </div><div class="text-muted">26 de Noviembre 2024</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
              </section> 
