--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ border:0px solid;
                                     <h5 class="card-title mt-3 mb-1">Práctica 8: Bluetooth MOD</h5>
                                     <p class="card-text mb-0">En esta práctica se retoma lo aprendido en la práctica de bluetooth y se aplica a un ensamble más complejo, como lo es un coche a control remoto.</p>
                                 </div>
-                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="practica8">Leer más</a></div>
+                                <div class="d-grid py-4 px-4"><a class="btn btn-primary" href="https://www.instructables.com/Reporte-De-Proyecto-Final-Introducci%C3%B3n-a-La-Mecatr/">Leer más</a></div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
